--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
+# -------------------------
 # Data Manipulation
-pandas
-numpy
+# -------------------------
+pandas>=2.0.0
+numpy>=1.24.0
 
-# Visualization
-matplotlib
-seaborn
-plotly
-altair>=5.0.0
-
+# -------------------------
 # Machine Learning
-scikit-learn
-xgboost
-joblib
+# -------------------------
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+joblib>=1.3.0
 
-# Deployment
+# -------------------------
+# Visualization
+# -------------------------
+plotly>=5.18.0
+
+# -------------------------
+# App Deployment
+# -------------------------
 streamlit>=1.30.0
-
-# Statistical Analysis
-statsmodels
