--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,19 @@
-# -------------------------
-# Data Manipulation
-# -------------------------
-pandas>=2.0.0
-numpy>=1.24.0
+# Data Manipulation & Excel
+pandas
+numpy
+xlsxwriter
+openpyxl
 
-# -------------------------
-# Machine Learning
-# -------------------------
-scikit-learn>=1.3.0
-xgboost>=2.0.0
-joblib>=1.3.0
-
-# -------------------------
 # Visualization
-# -------------------------
-plotly>=5.18.0
+matplotlib
+seaborn
+plotly
+altair>=5.0.0
 
-# -------------------------
-# App Deployment
-# -------------------------
+# Machine Learning
+scikit-learn
+xgboost
+joblib
+
+# Deployment
 streamlit>=1.30.0
